# StudentDataGUI

./: #ScreenreaderSkillsProgression.py#  #main.py#  .dockerignore  .gitattributes  .gitignore  AbacusSkillsProgression.py  AccessibilityReport20250722.md  AccessibilityTesting.md  BrailleSkillsProgression.py  DOCKER_README.md  DockerCompose.yaml  Dockerfile  Dockerfile.podman  FIXES_APPLIED.md  InstructionalMaterials.py  Pipfile  README.md  README_students_json.md  WEBSKELETON.py  __Pipfile  _oldDockerfile  abacus.py  anecdotalnotes.py  braille.py  braillenote.py  brailletmp.py  compose.yaml  contactlog.py  cvi.py  docker-compose.override.yml  helpers.py  homepage.py  ios.py  main.py  main2.py  mainOLD.py  mainTEST.py~  mainold.py  menu.py  podman-compose.yml  (+12 more)
SiteAsPages/: abacus.py  braille.py  braillenote.py  contactLog.py  contentpages.py  cvi.py  homepage.py  ios.py  main.py  menu.py  screenreader.py  theme.py
SiteAsPages/instructionMaterials/: GettingStartedWindows11.doc
SiteAsPages/visualScan/: README.md
SiteAsPages/visualScan/VisualScanHeatMap/: fieldMap_1.html  fieldMap_5.html
StudentDataCollectionGUI/: abacusprogression.py  brailleprogression.py  helpers.py  main.py  requirements.txt  screenreaderprogression.py  students.db
StudentDataCollectionGUI/StudentDataBase/:  test.txt  Addisonbooker2022_08_29-102335.txt  Addisonbooker2022_08_29-102458.txt  Addisonbooker2022_08_29-102649.txt  Addisonbooker2022_08_29-102845.txt  Addisonbooker2022_08_29-102941.txt  Addisonbooker2022_08_29-1033.txt  Addisonbooker2022_08_29-1034.txt  Addisonbooker2022_08_29-1035.txt  Addisonbooker2022_08_29-1037.txt  Addisonbooker2022_08_29-104040_AM.txt  Addisonbooker2022_08_29-111253.txt  Addisonbooker2022_08_29-120629.txt  Alaijahvaldez2022_08_29-1031.txt  Austindenney2022_08_29-093156.txt  Ccooper2022_08_29-084046.txt  Ccooper2022_08_29-085725.txt  Ccooper2022_08_29-090113.txt  Ccooper2022_08_29-090423.txt  Ccooper2022_08_29-090613.txt  Ccooper2022_08_29-090655.txt  Ccooper2022_08_29-091347.txt  Ccooper2022_08_29-091424.txt  Ccooper2022_08_29-091752.txt  Ccooper2022_08_29-092011.txt  Ccooper2022_08_29-092109.txt  Ccooper2022_08_29-092301.txt  Ccooper2022_08_29-092406.txt  Filenames.txt  omnibusDatabase.csv
StudentDataGUI/: __init__.py  __main__.py  main.py
StudentDataGUI/appHelpers/: __init__.py  artifacts.py  helpers.py  roster.py  sqlgenerate.py  workingdirectory.py
StudentDataGUI/appPages/: InstructionalMaterials.py  __init__.py  abacus.py  braille.py  braillenote.py  contactlog.py  cvi.py  digitalliteracy.py  homepage.py  ios.py  keyboarding.py  observations.py  screenreader.py  sessionnotes.py
StudentDataGUI/appTheming/: __init__.py  menu.py  theme.py
StudentDataGUI/test/: test_abacus.py  test_braille.py  test_braillenote.py  test_contactlog.py  test_cvi.py  test_homepage.py  test_instructionalmaterials.py  test_ios.py  test_keyboarding.py  test_screenreader.py
StudentDataGUI/visualScan/: cviheatmap.js
StudentDataGUI/visualScan/VisualScanHeatMap/: fieldMap_3.html  fieldMap_8VT.html
appHelpers/: helpers.py  roster.py  sqlgenerate.py  workingdirectory.py
appPages/: InstructionalMaterials.py  abacus.py  anecdotalnotes.py  braille.py  braillenote.py  contactlog.py  cvi.py  digitalliteracy.py  digitalliteracyelem.py  homepage.py  ios.py  keyboarding.py  menu.py  observations.py  screenreader.py  sessionnotes.py  theme.py
appTheming/: menu.py  theme.py
app_home/.matplotlib/: fontlist-v390.json
app_home/StudentDataFiles/Adalyn Anderson/: omnibusDatabase.csv
app_home/StudentDataFiles/Ami Rito/: cviProgression.csv
app_home/StudentDataFiles/Brighton Tingey/: ScreenReaderSkillsProgression.csv
app_home/StudentDataFiles/Lydia Petrie/: omnibusDatabase.csv
app_home/StudentDataFiles/Rachel Scott/: AbacusSkillsProgression.csv
app_home/StudentDataFiles/Tatum Henderson/: omnibusDatabase.csv
app_home/StudentDatabase/StudentDataFiles/Cason Hemphill/: digitalliteracyProgression.csv
app_home/StudentDatabase/StudentDataFiles/Luke Montgomery/: iosProgression.csv
app_home/StudentDatabase/StudentDataFiles/TJ Gutierrez/: BrailleSkillsProgression.csv
app_home/StudentDatabase/StudentDataFiles/Tatum Henderson/: bntProgression.csv
app_home/StudentDatabase/StudentDataFiles/Taylor Troxel/: omnibusDatabase.csv
app_home/appHelpers/: roster.py
json_Files/: students.json  students.json.txt
lint_results/: ABACUSpylint.txt  BRAILLEpylint.txt  SCREENREADERpylint.txt  flake8.txt  mypy.txt  pylint.py  pylint.txt  pyright.txt  ruff.txt
old/: .contactlog.py@neomake_14092_28.py
old/old_wxPythonVersion/: mainOLD.py
old/visualScan/VisualScanHeatMap/: fieldMap_2.html  fieldMap_4.html  fieldMap_6.html  fieldMap_7VT.html
pylint_reports/: 20230803.json  pylint_report_20230805.json  pylint_report_20230806.json  pylint_report_20230920.json
scripts/: check_imports.py  import_theme.py
tests/: conftest.py  test_abacus.py  test_braille.py  test_braillenote.py  test_contactlog.py  test_container.py  test_cvi.py  test_digitalliteracy.py  test_helpers.py  test_ios.py  test_minimal.py  test_screenreader.py  test_sqlgenerate.py
visualScan/: README.md
visualScan/VisualScanHeatMap/: fieldMap.html
