[tool.poetry]
name = "student-skills-progression"
version = "0.1.0b"
authors = ["Michael Ryan Hunsaker <hunsakerconsulting@gmail.com>"]
description = "Data collection application for Teachers of Students with Visual Impairments"
maintainers = ["Michael Ryan Hunsaker, M.Ed., Ph.D. <hunsakerconsulting@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "student-skills-progression"}]
repository = "https://github.com/mrhunsaker/StudentDataGUI"
keywords = ["visual impairment", "education", "data collection"]
classifiers = [
            "Development Status :: 4 - Beta",
            "Environment :: Win32 (MS Windows)",
            "Framework :: FastAPI",
            "Intended Audience :: Education",
            "Intended Audience :: End Users/Desktop",
            "License :: Freely Distributable",
            "Operating System :: POSIX :: Linux",
            "Operating System :: Microsoft :: Windows :: Windows 11",
            "Programming Language :: Python :: 3.11",
            "Topic :: Education",
            "Topic :: Education :: Testing"
            ]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
attrdict = "^2.0.1"
datetime = "^5.2"
statistics = "^1.0.3.5"
pandas = "^2.1.1"
plotly = "^5.17.0"
numpy = "^1.26.0"
matplotlib = "^3.8.0"
pathlib = "^1.0.1"
sqlalchemy = "^2.0.21"
nicegui = "^1.3.15"
screeninfo = "^0.8.1"
pythonnet = "^3.0.2"
pywebview = "^4.3.3"
clr-loader = "^0.2.6"
jedi = "^0.19.1"
mypy = "^1.5.1"
black = "^23.9.1"
pylint = "^3.0.0"
pyright = "^1.1.329"
ruff = "^0.0.292"
pytest = "^7.4.2"
flake8-pyproject = "^1.2.3"
cefpython3 = {url = "https://github.com/cztomczak/cefpython/releases/download/v66.1/cefpython3-66.1-py2.py3-none-win_amd64.whl", platform="Windows"}
pyqt5 = "^5.15.9"
pycairo = "^1.25.0"
pyobject = "^1.2.1"


[tool.flake8]
exclude = ""
max-line-length = 512
ignore = ["E201", "E202", "E203", "E266", "E265", "E402", "E501"]

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310', 'py311', 'py312']

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 512
disable = '''
    C0103,
    C0114,
    C0115,
    C0116,
    R0903,
    R0913,
    W0105,
    R0915,
    W0109,
    W0108,
    C0103,
    C0413,
    E0401,
    W0621,
    R1734,
    R0914,
    R0912,
    C0302,
    W0612,
    W0613,
    R0801,
    R1735
    '''
good-names = [
    "c",
    "e",
    "i",
    "conn"
]