[tool.poetry]
name = "student-skills-progression"
version = "0.6.0b1"
authors = ["Michael Ryan Hunsaker <hunsakerconsulting@gmail.com>"]
description = "Data collection application for Teachers of Students with Visual Impairments"
maintainers = ["Michael Ryan Hunsaker, M.Ed., Ph.D. <hunsakerconsulting@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "student-skills-progression" }]
repository = "https://github.com/mrhunsaker/StudentDataGUI"
keywords = ["visual impairment", "education", "data collection"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Framework :: FastAPI",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "License :: Freely Distributable",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Programming Language :: Python :: 3.11",
    "Topic :: Education",
    "Topic :: Education :: Testing"
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
attrdict = "^2.0.1"
datetime = "^5.2"
statistics = "^1.0.3.5"
pandas = "^2.1.2"
plotly = "^5.18.0"
numpy = "^1.26.1"
matplotlib = "^3.8.1"
pathlib = "^1.0.1"
nicegui = "^1.4.1"
screeninfo = "^0.8.1"
pythonnet = "^3.0.3"
pywebview = "^4.4.1"
jedi = "^0.19.1"
cefpython3 = { url = "https://files.pythonhosted.org/packages/3b/d4/f313221a999e4d295cc8fcb15fc4ac9c98f6759e50735d6f6ce84fd3e98a/cefpython3-66.1-py2.py3-none-win_amd64.whl" }
clr-loader = { url = "https://files.pythonhosted.org/packages/b3/1a/2801c4e3888aac8fcd4d88d32a1155a778d1c01ca040ae8137d433a39cc6/clr_loader-0.2.6-py3-none-any.whl" }
aiohttp = "3.9.0b0"
mypy = "^1.6.1"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.2"
black = "^23.10.1"
ruff = "^0.1.3"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "student_skills_progression"
url = "https://github.com/mrhunsaker/StudentDataGUI"
priority = "primary"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.black]
line-length = 88
target-version = [
    'py37',
    'py38',
    'py39',
    'py310',
    'py311',
    'py312'
]
include = '\pyi?$'
exclude = '''
/(
    \.git
    | \.tox
    \.venv
)/
'''
preview = true
skip_magic_trailing_comma = true

[tool.pyanalyze]
missing_parameter_annotation = true
missing_return_annotation = true
incompatible_override = true

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 88
disable = '''
    C0103,
    C0114,
    C0115,
    C0116,
    R0903,
    R0913,
    W0105,
    R0915,
    W0109,
    W0108,
    C0301,
    C0413,
    E0401,
    W0621,
    R1734,
    R0914,
    R0912,
    C0302,
    W0612,
    W0613,
    R0801,
    R1735
    '''
good-names = [
    "c",
    "e",
    "i",
    "conn"
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
line-length = 88
include = ["*.py"]
preview = true
respect-gitignore = false
target-version = "py310"
select = ["D"]
ignore = ["D417"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
line-ending = "native"
skip-magic-trailing-comma = false

[tool.ruff.isort]
case-sensitive = true
combine-as-imports = true
force-single-line = true
force-sort-within-sections = true
force-wrap-aliases = true
lines-after-imports = 2
lines-between-types = 1
order-by-type = true
relative-imports-order = "closest-to-furthest"

[tool.ruff.pycodestyle]
max-line-length = 120

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.pylint]
max-branches = 25
max-public-methods = 25

[tool.ruff.flake8-copyright]
author = "Michael Ryan Hunsaker, M.Ed., Ph.D."

[tool.ruff.flake8-import-conventions]
[tool.ruff.flake8-import-conventions.aliases]
altair = "alt"
"matplotlib.pyplot" = "plt"
numpy = "np"
pandas = "pd"
seaborn = "sns"
scipy = "sp"
"plotly.graph_objects" = "go"
tkinter = "tk"
"plotly.express" = "px"
polars = "pl"
pyarrow = "pa"
tensorflow = "tf"

[tool.ruff.flake8-quotes]
avoid-escape = true
docstring-quotes = "double"
inline-quotes = "single"
multiline-quotes = "double"
